force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/amazonconnect__AC_QueueMetrics__c.object-meta.xml
<CustomObject>
    <label>AC Real Time Queue Metric</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Real Time Queue Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>