force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/fields/amazonconnect__Agents_Non_Productive__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Agents_Non_Productive__c</fullName>
    <label>Agents Non Productive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>