force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/fields/amazonconnect__Contacts_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Contacts_Scheduled__c</fullName>
    <label>Contacts Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>