force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/fields/amazonconnect__Oldest_Contact_Age__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Oldest_Contact_Age__c</fullName>
    <label>Oldest Contact Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>