force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/fields/amazonconnect__Queue_ARN__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Queue_ARN__c</fullName>
    <label>Queue ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>