force-app/main/default/objects/amazonconnect__AC_QueueMetrics__c/fields/amazonconnect__Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Queue_Id__c</fullName>
    <externalId>true</externalId>
    <label>Queue Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>